# RAGalactic

./: .dockerignore  .env_exemple  .gitignore  DockerFile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
RAGalacticPDF/chroma_db_data/: chroma.sqlite3
RAGalacticPDF/data/: json_ids.json
RAGalacticPDF/src/: app.py  prompt.py  rag.py
RAGs/one_pdf_rag/chroma_db_data/: chroma.sqlite3
RAGs/one_pdf_rag/data/: json_ids.json
RAGs/one_pdf_rag/src/: app.py  config.yaml  main.py  prompt.py  pydantic_valids.py  rag.py
