[tool.poetry]
name = "RAGalacticPDF"
version = "0.1.0"
description = "A Retrieval-Augmented Generation (RAG) system."
authors = ["Valentin Ozeel <your.email@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ValentinOzeel/RAGalactic"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
llama-index = "^0.10.43"
llama-parse = "^0.4.4"
llama-index-embeddings-huggingface = "^0.2.1"
llama-index-llms-ollama = "^0.1.5"
llama-index-vector-stores-chroma = "^0.1.8"
llama-index-extractors-entity = "^0.1.2"
streamlit = "^1.35.0"
streamlit_cookies_manager = "^0.2.0"
pydantic = "^2.7.3"
chromadb = "^0.5.0"
numpy = "^1.26.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"